Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86945

QWebEngine crashes in Debug build when opening PDF file

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.2
    • 5.15.1
    • WebEngine
    • None
    • Qt Creator
      VS2017
      Windows 10
    • Windows
    • bc35c7711adb31a1e4d20f4cc0d318df3f6faf77 (qt/qtwebengine-chromium/83-based) 7974e32748cbb6a39a2838506a62599c36fa0828 (qt/qtwebengine-chromium/87-based)

      When using QWebEngine to open a PDF file, the application crashes in a debug build with the following error:

      [2392:19364:0925/081102.094:ERROR:extension_function_dispatcher.cc(486)] Permission denied for metricsPrivate.recordValue
      [2392:16644:0925/081102.143:FATAL:feature_list.cc(354)] Check failed: CheckFeatureIdentity(feature). RendererAppContainer
      

      Everything seems to work fine in a release build (the PDF is properly displayed).

      This can be reproduced with the "Qt-5.15.1\webenginewidgets\simplebrowser" example project:

      1. Compile / execute the example in debug configuration
      2. Within the "Qt Simple Browser" example application, use "File -> Open File..." to open any local PDF file
      3. The application apparently tries to load the file but crashes within seconds
      4. This works fine when doing the same in release configuration

        For Gerrit Dashboard: QTBUG-86945
        # Subject Branch Project Status CR V

            qt_webengine_team Qt WebEngine Team
            fgross Florian Groß
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes