Fix assert when checking if RendererAppContainer feature is enabled

It asserts with MSVC 32bit but it might fail with other configurations
too because the RendererAppContainer feature will have more than
one instance in the memory and it can break pointer-based identity
lookup (see documentation of base::Feature in
chromium/base/feature_list.h).

Make the Feature instance static to ensure it has the same address for
each of the IsAppContainerEnabled() calls.

Change-Id: I937cbd7c4dd46df2d4b48c4af239db1e6e8feb6f
Fixes: QTBUG-86945
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>