chromium/sandbox/policy/win/sandbox_win.cc
@@ -582,8 +582,11 @@ bool IsAppContainerEnabled() {
   if (base::win::GetVersion() < base::win::Version::WIN8)
     return false;
 
-  return base::FeatureList::IsEnabled(
-      {"RendererAppContainer", base::FEATURE_DISABLED_BY_DEFAULT});
+  static const base::Feature kRendererAppContainer {
+     "RendererAppContainer", base::FEATURE_DISABLED_BY_DEFAULT
+  };
+
+  return base::FeatureList::IsEnabled(kRendererAppContainer);
 }
 
 ResultCode SetJobMemoryLimit(const base::CommandLine& cmd_line,
